Page overflow issue solved

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     background-color: rgb(0, 0, 33);
     color: white;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 nav {
